<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/quiz"
            android:title="@string/quiz" />

        <item
            android:id="@+id/nav_quizImg"
            android:icon="@drawable/iconuser"
            android:title="@string/quienes"/>
        <item
            android:id="@+id/nav_wallpaper"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/wallpapers" />
        <item
            android:id="@+id/nav_tienda"
            android:icon="@drawable/ic_shopping_black_48dp"
            android:title="@string/tienda" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_account_multiple_black_48dp"
            android:title="@string/amigos"/>
    </group>

    <item android:title="@string/redesSociales" >
        <menu>
            <item
                android:id="@+id/nav_compartit"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/compartir" />

        </menu>
    </item>

</menu>
