<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">

    <Button
        android:id="@+id/btn_level_facil"
        style="@style/styleBtnLevel"
        android:layout_marginTop="24dp"
        android:text="@string/facil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_level_normal"
        style="@style/styleBtnLevel"
        android:layout_marginTop="16dp"
        android:text="@string/medio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_level_facil"
        android:alpha="0.5"
        android:enabled="false"/>

    <Button
        android:id="@+id/btn_level_dificil"
        style="@style/styleBtnLevel"
        android:layout_marginTop="16dp"
        android:text="@string/dificil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_level_normal"
        android:alpha="0.5"
        android:enabled="false"/>

    <Button
        android:id="@+id/btn_level_dios"
        style="@style/styleBtnLevel"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/mododios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_level_dificil"
        android:alpha="0.5"
        android:enabled="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>