<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/tv_mensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:text="@string/msg_confirmacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_aceptar"
        style="@style/styleBtnDialogConfirm"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnAceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/tv_mensaje" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/styleBtnDialogConfirm"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_calcel"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_aceptar"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>